# agent-hooks-rs

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  deny.toml
.cargo/: audit.toml
.github/workflows/: publish-rust.yml  rust-ci.yml
contract-fixtures/v1/: SHA256SUMS  bash.json  intent_agent_override.json  wallet.transfer.json  web_fetch.json
crates/sigil-agent-hooks-core/: Cargo.toml
crates/sigil-agent-hooks-core/src/: client.rs  lib.rs  rejection.rs  types.rs
crates/sigil-agent-hooks-core/tests/: client_behavior.rs  contract_fixtures.rs  rejection.rs
crates/sigil-agent-hooks-ironclaw/: Cargo.toml
crates/sigil-agent-hooks-ironclaw/src/: lib.rs
docs/plans/: 2026-04-17-agent-hooks-rs-v0.1.0.md
