[workspace]
members = [
  "crates/sigil-agent-hooks-core",
  "crates/sigil-agent-hooks-ironclaw",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
