[package]
name = "sigil-agent-hooks-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust client for Sigil pre-tool authorization"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum = "0.8"
